# scm

./: .gitignore  AGENTS.md  Design.md  Plan.md  app.py  checklist.md  codex_deploy_plan.md  feedback.md  pyproject.toml  readme.md  update_260624.md  upgrade.md  upgrade_plan.md
.streamlit/: config.toml
csv/: 01_electronics_stable.csv  02_food_seasonal.csv  03_auto_parts_volatile.csv  04_medical_high_service.csv  05_fashion_peak.csv  README.md
doc/: 01_project_overview.md  02_system_design.md  03_development_phases.md  04_background_research.md  05_핵심로직_v7_최종확정.md  06_system_design_and_phases.md  07_validation_results.md  08_endtoend_review_findings.md  09_평가기준표.md  10_근거자료_출처모음.md  11_개발자_인수인계서.md  12_주제_최종결론.md
doc/new/: 05_핵심로직_v8_최종확정.md  11_개발자_인수인계서.md  12_주제_최종결론.md
scripts/: generate_csv_samples.py  init_db.py
src/scm/: __init__.py  allocation.py  analysis.py  classification.py  comparison.py  constants.py  copilot.py  csv_import.py  database.py  diagnosis.py  gscpi.py  route_risk.py  safety_stock.py  scenario.py  service_level_allocation.py  simulation.py  whatif.py
tests/: conftest.py  test_allocation.py  test_app.py  test_classification.py  test_comparison.py  test_copilot.py  test_csv_import.py  test_database.py  test_diagnosis.py  test_gscpi.py  test_integration.py  test_route_risk.py  test_safety_stock.py  test_scenario.py  test_scenario_sources.py  test_service_level_allocation.py  test_simulation.py  test_whatif.py
